# law-parser

./: .gitignore  pyproject.toml
doc_domain_44fz/cons/: 44-FZ-List.jsonl  44-FZ-List.xml  44-FZ.jsonl  List-44-FZ-connected documents.xml  repomix.config.json  Арбитражный процессуальный кодекс Российской Федерации  от 2.xml  Обзор недостатков и нарушений, выявленных Федеральным казнач.xml  Обзор результатов осуществления Федеральным казначейством ко.xml  Обзор судебной практики Верховного Суда Российской Федерации (1).xml  Обзор судебной практики Верховного Суда Российской Федерации (2).xml  Обзор судебной практики Верховного Суда Российской Федерации.xml  Обзор судебной практики, связанной с привлечением к админист.xml  Обзор_  Практика ФАС по Закону N 44-ФЗ_ какие ошибки отметил.xml  Определение Верховного Суда РФ от 05.12.2025 N 310-ЭС21-2741.xml  Определение Верховного Суда РФ от 08.12.2025 N 305-ЭС25-1165.xml  Определение Конституционного Суда РФ от 28.05.2020 N 1123-О.xml  Определение Конституционного Суда РФ от 30.10.2025 N 2837-О.xml  Постановление Верховного Суда РФ от 09.10.2025 N 38-АД25-9-К.xml  Постановление Верховного Суда РФ от 10.11.2025 N 59-АД25-9-К.xml  Постановление Верховного Суда РФ от 13.11.2025 N 16-АД25-12-.xml  Постановление Верховного Суда РФ от 20.11.2025 N 48-АД25-13-.xml  Постановление Девятого кассационного суда общей юрисдикции о.xml  Постановление Конституционного Суда РФ от 18.03.2021 N 7-П.xml  Постановление Правительства РФ от 29.12.2021 N 2571 (ред. от.xml  Постановление Семнадцатого арбитражного апелляционного суда (1).xml  Постановление Семнадцатого арбитражного апелляционного суда.xml  Приказ ФАС России от 25.05.2012 N 339 (ред. от 16.02.2016).xml  Решение Красноярского УФАС России от 07.11.2025 N 024_06_106.xml  Решение Свердловского УФАС России от 29.10.2025 N 066_06_104.xml  Решение Северо-Осетинского УФАС России от 06.11.2025 по делу.xml  Решение ФАС России от 06.11.2025 по делу N 28_06_105-4409_20.xml  Решение ФАС России от 06.11.2025 по делу N 28_06_105-4463_20.xml  Решение ФАС России от 06.11.2025 по делу N 28_06_105-4466_20.xml  Решение ФАС России от 07.11.2025 по делу N 25_44_104_516 Обс.xml  Решение Хабаровского УФАС России от 06.11.2025 N РНП-399 по.xml  Список документов (1).xml  Список документов (2).xml  Список документов (3).xml  Список документов (4).xml  Список документов.xml  (+2 more)
doc_domain_44fz/cons/44-FZ/: 44-FZ-2026-articles.jsonl  44-FZ-2026-structure.json
doc_domain_44fz/fixtures/: cons
docs/: plan-v3-:-develop-regulatory-parser.md  plan-v4-:-develop-regulatory-parser.md  plan-v5-:-develop-regulatory-parser.md
docs/project_v1/: Arch v.0.3 YAML = Behavioral Specification Layer.md  Arch_v0.01.md  Arch_v0.03_apdx_*Rule-First vs LLM-Assist Flow (LDUP Token Economy Architecture).md  Architecture scheme in YAML-(ldup_architecture.yaml).md  Dependency Graph) DSPy Visualizer (Mermaid).md  LDUP Whitepaper v1.0.md  LDUP — Cognitive Knowledge Flow View.md  LDUP — Legal Neural Architecture.md  LDUP_PRD_v1.0.md  Mermaid - Data Lifecycles.md  Mermaid-YAML-RuleSpec-DSPy Graph-Verified Algorithm.md  Mermaid-diagram of interationPolicy Optimizer to DSPy Graph.md  Policy Optimizer in DSPy-workflow LDUP.md  Policy Optimizer in YAML (policy_config.yaml).md  Reinforcement Decision Flow.mc  SRC correction cycle.md  SRC-cycles (temporal + semantic).md  arch_v0.02.md  arch_v0.02_mvp.md  arch_v0.03.md  cycle SRC-feedback → YAML-patch.md  ldup_system.yaml  standarts.md
docs/project_v2/: architecture_diagram.md  cognitive_workflow.md  optimization_loop.md
docs/project_v3/: architecture.md  mermaid.md  self_improvement.md  workflow.md
docs/project_v4/: .gitkeep  CHANGELOG.md  README.md  VERIFICATION_REPORT.md  architecture.md  claude_advise.md  codex_advise.md  gemini_advise.md  mermaid.md  observability.md  self_improvement.md  serialization.md  testing.md  workflow.md
docs/project_v5/: README.md  api.md  components.md  design.md  evaluation.md  maintainability.md  performance.md  reliability.md  requirements.md
docs/project_v5/mermaid/: diagrams.md
plan/: v1-:-инфраструктура:-pydantic-модели,-yaml-store,-логирование-и-метрики.md
prompt_domain_44fz/: federal_authorities.yaml  federal_control_authorities.yaml  index.yaml  legislation_hierarchy.yaml  parsing_prompt.yaml
prompt_domain_44fz/archive/: parsing_prompt_1.0.0_20251231_1425.yaml  yaml_prompt_20251231_1230.yaml
prompt_domain_44fz/contracts/: api.yaml  extractor-api.md
prompt_domain_44fz/development/: REGIONAL_CONTROL_AUTHORITIES_PLAN.md
prompt_domain_44fz/registers/: federal_acts.yaml  letters.yaml
prompt_domain_44fz/sources/: consultant_word2003xml.yaml
prompt_domain_44fz/structures/: 44fz.yaml
prompt_domain_44fz/structures/archive/: 44fz_1.1.0_20251231_1407.yaml  44fz_2.0.0_20251231_1436.yaml  44fz_2.2.0_20260101_0029.yaml  44fz_20251231_1200.yaml  44fz_20251231_1341.yaml  44fz_20260101_1918.yaml
prompt_domain_44fz/validation/: semantic_rules.yaml  structural_rules.yaml
research/: dspy_3_architecture.md
research/AISecurity/: analysis_report.md  rlm_toolkit_repomix.xml
scripts/: validate_rlm_parsing.py
